Short description of team members

--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -9,7 +9,7 @@
 {#<div class="row form-group"></div>#}
 <div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
     {#https://www.gesis.org/en/research/external-funding-projects/overview-external-funding-projects/a-virtual-research-infrastructure-for-large-scale-qualitative-data/#}
-    <h3 style="color: #58748f;">Open Research Computing (ORC) Project</h3>
+    <h3 style="color: #58748f;">About the Project </h3>
 
     <p style="color: #777;"> The iLCM project aims to develop an integrated research environment for the analysis of structured as well as unstructured data.
         The research environment extends the existing Leipzig Corpus Miner framework into an "Open Research Computing" (ORC) "Software as a Service" platform.
