--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -1,5 +1,6 @@
 {#<div class="row form-group" style="padding-left: 30px; padding-right: 30px;">#}
-<div class="row form-group">
+<div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
+    <h3 style="color: #58748f;"> TEAM </h3>
     <div class="row align-items-start">
 
         <div class="col-md-4 col-sm-8">
@@ -11,12 +12,13 @@
                 <div class="team-content">
                     <h3 class="title">Arnim Bleier</h3>
                     <p class="description">
-                        Arnim Bleier is a postdoctoral researcher in the <a
-                            href="https://www.gesis.org/en/institute/departments/computational-social-science/">Department
-                        of Computational Social Science</a> at GESIS – Leibniz-Institute for the Social Sciences. His
-                        research interests are in the field of Computational Social Science, with an emphasis on
-                        Reproducible Research. In collaboration with social scientists, he develops models for the
-                        content, structure and dynamics of social phenomena.
+                        Project Leader
+{#                        Arnim Bleier is a postdoctoral researcher in the <a#}
+{#                            href="https://www.gesis.org/en/institute/departments/computational-social-science/">Department#}
+{#                        of Computational Social Science</a> at GESIS – Leibniz-Institute for the Social Sciences. His#}
+{#                        research interests are in the field of Computational Social Science, with an emphasis on#}
+{#                        Reproducible Research. In collaboration with social scientists, he develops models for the#}
+{#                        content, structure and dynamics of social phenomena.#}
 
                     </p>
                 </div>
@@ -32,11 +34,12 @@
                 <div class="team-content">
                     <h3 class="title">Kenan Erdogan </h3>
                     <p class="description">
-                        Kenan Erdogan is a software engineer with a background in Scientific Computing. Currently he is
-                        the lead developer at GESIS Notebooks project and among others he is a contributor to <a
-                            href="https://github.com/jupyterhub">JupyterHub repositories</a>. Before joining the GESIS
-                        Notebooks team he worked on the <a href="https://www.wikiwho.net"> WikiWho </a> project, making
-                        large online collaboration networks available to Social Science research. </p>
+                        Project Engineer
+{#                        Kenan Erdogan is a software engineer with a background in Scientific Computing. Currently he is#}
+{#                        the lead developer at GESIS Notebooks project and among others he is a contributor to <a#}
+{#                            href="https://github.com/jupyterhub">JupyterHub repositories</a>. Before joining the GESIS#}
+{#                        Notebooks team he worked on the <a href="https://www.wikiwho.net"> WikiWho </a> project, making#}
+{#                        large online collaboration networks available to Social Science research. </p>#}
                 </div>
             </div>
         </div>
@@ -49,12 +52,14 @@
                 <div class="team-content">
                     <h3 class="title">Dhurim Sylejmani</h3>
                     <p class="description">
-                        Dhurim Sylejmani is a MSc student at the Web Science program at the University of
-                        Koblenz-Landau (Germany) and a student research assistant at GESIS - Leibniz-Institute for the
-                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">GESIS
-                        Gallery</a>.
-                        He is constantly exploring new concepts, applications and technologies that can add to his
-                        knowledge.
+                        Assistant Developer
+{#
+Dhurim Sylejmani is a MSc student at the Web Science program at the University of#}
+{#                        Koblenz-Landau (Germany) and a student research assistant at GESIS - Leibniz-Institute for the#}
+{#                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">GESIS#}
+{#                        Gallery</a>.#}
+{#                        He is constantly exploring new concepts, applications and technologies that can add to his#}
+{#                        knowledge.#}
                     </p>
                 </div>
             </div>
