deploy binderhub-0.2.0-654b31d with jupyter/repo2docker:bf29f66f

--- a/gesisbinder/templates/loading.html
+++ b/gesisbinder/templates/loading.html
@@ -3,6 +3,8 @@
 {% block head %}
 <meta id="base-url" data-url="{{base_url}}">
 <meta id="badge-base-url" data-url="{{badge_base_url}}">
+<!-- Other OG information in page.html -->
+<meta property="og:description" content="{{social_desc}}">
 <script src="{{static_url("dist/bundle.js")}}"></script>
 {{ super() }}
 <link href="{{static_url("loading.css")}}" rel="stylesheet">
