--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -18,8 +18,7 @@
 
   <!-- Social media previews -->
   <meta property="og:title" content="The Binder Project">
-  <meta property="og:description" content="Reproducible, sharable, interactive computing environments.">
-  <meta property="og:image" content="https://mybinder.org/static/images/logo_social.png">
+  <meta property="og:image" content="https://notebooks.gesis.org/binder/static/images/logo_social.png">
   <meta property="og:image:width" content="1334">
   <meta property="og:image:height" content="700">
   <meta property="og:image:alt" content="The Binder Project Logo" />
