deploy binderhub-0.2.0-409f200 with jupyter/repo2docker:d72c6018

--- a/gesisbinder/templates/error.html
+++ b/gesisbinder/templates/error.html
@@ -1,5 +1,8 @@
 {% extends "page.html" %}
 
+{% block meta_og %}
+{% endblock meta_og %}
+
 {% block main %}
 <div class="text-center jumbotron" style="background-color: #ffffff;">
   <h1>
