--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -17,13 +17,17 @@
   <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png" />
 
   <!-- Social media previews -->
-  <meta property="og:title" content="The Binder Project">
-  <meta property="og:image" content="https://notebooks.gesis.org/binder/static/images/logo_social.png">
-  <meta property="og:image:width" content="1334">
-  <meta property="og:image:height" content="700">
-  <meta property="og:image:alt" content="The Binder Project Logo" />
-
-  <meta name="twitter:card" content="summary_large_image">
+  {% block meta_og %}
+  {% block meta_og_title %}
+  <meta property="og:title" content="GESIS Binder">
+  <meta property="og:description" content="Reproducible, sharable, open, interactive computing environments.">
+  {% endblockblock meta_og_title %}
+  <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo.svg">
+  <meta property="og:image:width" content="217">
+  <meta property="og:image:height" content="217">
+  <meta property="og:image:alt" content="GESIS Notebooks Logo" />
+  <meta name="twitter:card" content="summary">
+  {% endblockblock meta_og %}
 
   {% block extra_css %}
   {% endblock extra_css %}
