--- a/gesisbinder/templates/loading.html
+++ b/gesisbinder/templates/loading.html
@@ -22,7 +22,7 @@ div#loader {
 <!-- Other OG information in page.html -->
 <meta property="og:title" content="{{social_desc}}">
 <meta property="og:description" content="Click to run this interactive environment. From the Binder Project: Reproducible, sharable, open, interactive computing environments.">
-{% endblockblock meta_og_title %}
+{% endblock meta_og_title %}
 
 {% block main %}
 <div class="row form-group"></div>
