--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -21,13 +21,13 @@
   {% block meta_og_title %}
   <meta property="og:title" content="GESIS Binder">
   <meta property="og:description" content="Reproducible, sharable, open, interactive computing environments.">
-  {% endblockblock meta_og_title %}
+  {% endblock meta_og_title %}
   <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo.svg">
   <meta property="og:image:width" content="217">
   <meta property="og:image:height" content="217">
   <meta property="og:image:alt" content="GESIS Notebooks Logo" />
   <meta name="twitter:card" content="summary">
-  {% endblockblock meta_og %}
+  {% endblock meta_og %}
 
   {% block extra_css %}
   {% endblock extra_css %}
