fix binder templates for social

--- a/gesisbinder/templates/index.html
+++ b/gesisbinder/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "templates/index.html" %}
 
+{% block head %}
+<meta id="base-url" data-url="{{base_url}}">
+<meta id="badge-base-url" data-url="{{badge_base_url}}">
+<script src="{{static_url("dist/bundle.js")}}"></script>
+
+{{ super() }}
+{% endblock head %}
+
 {% block extra_css %}
 <style>
 {# NOTE: custom css only for binder form #}
