--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -22,9 +22,9 @@
   <meta property="og:title" content="GESIS Binder">
   <meta property="og:description" content="Reproducible, sharable, open, interactive computing environments.">
   {% endblock meta_og_title %}
-  <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo.svg">
-  <meta property="og:image:width" content="217">
-  <meta property="og:image:height" content="217">
+  <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo.png">
+  <meta property="og:image:width" content="57">
+  <meta property="og:image:height" content="51">
   <meta property="og:image:alt" content="GESIS Notebooks Logo" />
   <meta name="twitter:card" content="summary">
   {% endblock meta_og %}
