--- a/orc_site/templates/error.html
+++ b/orc_site/templates/error.html
@@ -1,5 +1,8 @@
 {% extends "page.html" %}
 
+{% block meta_social %}
+{% endblock meta_social %}
+
 {% block main %}
 <div class="text-center jumbotron" style="background-color: #ffffff;">
   <h1>
