--- a/orc_site/templates/page.html
+++ b/orc_site/templates/page.html
@@ -7,6 +7,18 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="GESIS Notebooks ({{version}})">
   {#<meta name="author" content="">#}
+
+  <!-- Social media previews -->
+  {% block meta_social %}
+  <meta property="og:title" content="GESIS Notebooks">
+  <meta property="og:description" content="Open Research Computing for the Social Sciences.">
+  <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png">
+  <meta property="og:image:width" content="800">
+  <meta property="og:image:height" content="800">
+  <meta property="og:image:alt" content="GESIS Notebooks Logo" />
+  <meta name="twitter:card" content="summary">
+  {% endblock meta_social %}
+
   <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
   {% block head %}
   <script src="{{ url_for('static', filename='vendor/jquery-3.2.1.min.js') }}"></script>
