--- a/gesisbinder/templates/loading.html
+++ b/gesisbinder/templates/loading.html
@@ -12,17 +12,17 @@ div#log-container {
     width: 100%;
     margin: 0 0;
 }
-div#loader {
+div#loader-text {
     overflow-wrap: break-word;
 }
 </style>
 {% endblock head %}
 
-{% block meta_og_title %}
+{% block meta_social_title %}
 <!-- Other OG information in page.html -->
 <meta property="og:title" content="{{social_desc}}">
 <meta property="og:description" content="Click to run this interactive environment. From the Binder Project: Reproducible, sharable, open, interactive computing environments.">
-{% endblock meta_og_title %}
+{% endblock meta_social_title %}
 
 {% block main %}
 <div class="row form-group"></div>
