--- a/gesisbinder/templates/page.html
+++ b/gesisbinder/templates/page.html
@@ -17,17 +17,17 @@
   <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png" />
 
   <!-- Social media previews -->
-  {% block meta_og %}
-  {% block meta_og_title %}
+  {% block meta_social %}
+  {% block meta_social_title %}
   <meta property="og:title" content="GESIS Binder">
   <meta property="og:description" content="Reproducible, sharable, open, interactive computing environments.">
-  {% endblock meta_og_title %}
+  {% endblock meta_social_title %}
   <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png">
   <meta property="og:image:width" content="800">
   <meta property="og:image:height" content="800">
   <meta property="og:image:alt" content="GESIS Notebooks Logo" />
   <meta name="twitter:card" content="summary">
-  {% endblock meta_og %}
+  {% endblock meta_social %}
 
   {% block extra_css %}
   {% endblock extra_css %}
