about page: re-arrange spaces and add img-responsive class

--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -7,7 +7,7 @@
 {% block main %}
 {#<div class="row form-group text-center">#}
 {#<div class="row form-group"></div>#}
-<div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
+<div class="row" style="padding-left: 30px; padding-right: 30px;">
     {#https://www.gesis.org/en/research/external-funding-projects/overview-external-funding-projects/a-virtual-research-infrastructure-for-large-scale-qualitative-data/#}
     <h3 style="color: #58748f;">About the Project </h3>
 
