--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -1,12 +1,12 @@
-{#<div class="row form-group" style="padding-left: 30px; padding-right: 30px;">#}
-<div class="row form-group" style="padding-left: 30px; padding-right: 30px;">
-    <h3 style="color: #58748f;"> TEAM </h3>
+<div class="row" style="padding-left: 30px; padding-right: 30px;">
+    <h3 style="color: #58748f;">Project Team</h3>
     <div class="row align-items-start">
 
-        <div class="col-md-4 col-sm-8">
+        <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
-                    <a href="https://www.gesis.org/person/arnim.bleier"> <img src="/static/images/team1.jpg" alt="">
+                    <a href="https://www.gesis.org/person/arnim.bleier">
+                        <img src="/static/images/team1.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="team-content">
@@ -25,14 +25,15 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-sm-8">
+        <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
-                    <a href="https://www.gesis.org/person/kenan.erdogan"> <img src="/static/images/team2.jpg" alt="">
+                    <a href="https://www.gesis.org/person/kenan.erdogan">
+                        <img src="/static/images/team2.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="team-content">
-                    <h3 class="title">Kenan Erdogan </h3>
+                    <h3 class="title">Kenan Erdogan</h3>
                     <p class="description">
                         Project Engineer
 {#                        Kenan Erdogan is a software engineer with a background in Scientific Computing. Currently he is#}
@@ -44,10 +45,10 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-sm-8">
+        <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
-                    <img src="/static/images/team3.jpg" alt="">
+                    <img src="/static/images/team3.jpg" class="img-responsive">
                 </div>
                 <div class="team-content">
                     <h3 class="title">Dhurim Sylejmani</h3>
@@ -56,7 +57,7 @@
 {#
 Dhurim Sylejmani is a MSc student at the Web Science program at the University of#}
 {#                        Koblenz-Landau (Germany) and a student research assistant at GESIS - Leibniz-Institute for the#}
-{#                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">GESIS#}
+{#                        Social Sciences. Currently working on <a href="https://notebooks.gesis.org/gallery/">Binder#}
 {#                        Gallery</a>.#}
 {#                        He is constantly exploring new concepts, applications and technologies that can add to his#}
 {#                        knowledge.#}
