use only federation url

--- a/gesisbinder/templates/about.html
+++ b/gesisbinder/templates/about.html
@@ -38,7 +38,7 @@
     function compare_verions() {
         var versions_url = "/binder/versions";
         var versions = "";
-        var mybinder_versions_url = "https://gke.mybinder.org/versions";
+        var mybinder_versions_url = "https://mybinder.org/versions";
         var mybinder_versions = "";
         $.get(
             versions_url,
