--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -53,10 +53,10 @@
         <p><strong>Supported by</strong></p>
     <div style="padding-left: 0; display: flex;">
         <div class="col">
-            <a href="https://gepris.dfg.de/gepris/projekt/324867496?context=projekt&task=showDetail&id=324867496&" target="_blank"><img src="{{ url_for('static', filename='images/DFG_CLAIM_163X60px.gif') }}" class="img-responsive center-block" style="margin-top:25%;"></a>
+            <a href="https://gepris.dfg.de/gepris/projekt/324867496?context=projekt&task=showDetail&id=324867496&" target="_blank"><img src="{{ url_for('static', filename='images/DFG_CLAIM_163X60px.gif') }}" class="img-responsive center-block" ></a>
         </div>
         <div class="col">
-            <img src="{{ url_for('static', filename='images/gesis-logo.png') }}" class="img-responsive center-block" style="margin-left: 10%;">
+            <img src="{{ url_for('static', filename='images/gesis-logo.png') }}" class="img-responsive center-block" style="margin-left: 20%;">
         </div>
     </div>
 </div>
