link ref - to the header name (Arnim, Kenan)

--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -10,7 +10,9 @@
                     </a>
                 </div>
                 <div class="team-content">
-                    <h3 class="title">Arnim Bleier</h3>
+                  <a href="https://www.gesis.org/institut/mitarbeiterverzeichnis/person/arnim.bleier">
+                      <h3 class="title">Arnim Bleier</h3>
+                  </a>
                     <p class="description">
                         Project Leader
 {#                        Arnim Bleier is a postdoctoral researcher in the <a#}
@@ -33,7 +35,9 @@
                     </a>
                 </div>
                 <div class="team-content">
-                    <h3 class="title">Kenan Erdogan</h3>
+                   <a href="https://www.gesis.org/institut/mitarbeiterverzeichnis/person/Kenan.Erdogan">
+                        <h3 class="title">Kenan Erdogan</h3>
+                   </a>
                     <p class="description">
                         Project Engineer
 {#                        Kenan Erdogan is a software engineer with a background in Scientific Computing. Currently he is#}
