add space before poweredby

--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -63,6 +63,7 @@
 
 {#TODO add partner leipniz#}
 
+<div class="row form-group"></div>
 <div class="row" style="padding-left: 30px; padding-right: 30px; color: #777;">
     <p>
         <strong>Powered by </strong>
