--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -1,5 +1,5 @@
-<div class="row" style="padding-left: 30px; padding-right: 30px;">
-    <h3 style="color: #58748f;">Project Team</h3>
+<div class="row row-side-margins">
+    <h3 class="title">Project Team</h3>
     <div class="row align-items-start">
 
         <div class="col-md-4 col-sm-4">
