remove all inline styles

--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -52,12 +52,12 @@
 
 <div class="row form-group row-side-margins">
         <p class="description"><strong>Supported by</strong></p>
-    <div style="padding-left: 0; display: flex;">
+    <div class="sponsored">
         <div class="col">
             <a href="https://gepris.dfg.de/gepris/projekt/324867496?context=projekt&task=showDetail&id=324867496&" target="_blank"><img src="{{ url_for('static', filename='images/DFG_CLAIM_163X60px.gif') }}" class="img-responsive center-block" ></a>
         </div>
         <div class="col">
-            <img src="{{ url_for('static', filename='images/gesis-logo.png') }}" class="img-responsive center-block" style="margin-left: 20%;">
+            <img src="{{ url_for('static', filename='images/gesis-logo.png') }}" class="img-responsive center-block gesis-logo">
         </div>
     </div>
 </div>
