--- a/orc_site/templates/error.html
+++ b/orc_site/templates/error.html
@@ -1,7 +1,11 @@
 {% extends "page.html" %}
 
+{% block extra_css %}
+<link href="/static/custom.css" rel="stylesheet" />
+{% endblock extra_css %}
+
 {% block main %}
-<div class="text-center jumbotron" style="background-color: #ffffff;">
+<div class="text-center jumbotron error-background">
   <h1>
     {% if status_code %}{{status_code}}: {% endif %}{{status_message}}
   </h1>
