--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -1,9 +1,13 @@
 {% extends "page.html" %}
 
+{% block extra_css %}
+<link href="/static/custom.css" rel="stylesheet" />
+{% endblock extra_css %}
+
 {% block main %}
 <div class="row form-group"></div>
 
-<div class="row form-group text-center" style="display: flex; align-items: center;">
+<div class="row form-group text-center project-text">
 {#    <div class="col-lg-1 col-md-1"></div>#}
 {#    <div class="col-lg-10 col-lg-offset-1 text-center">#}
     <div class="col-lg-6 col-md-6 col-sm-5 hidden-xs">
