--- a/orc_site/templates/gesis/header.html
+++ b/orc_site/templates/gesis/header.html
@@ -35,7 +35,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/gs_ms_banner_default_notebooks_beta.png"
+                        <img src="/static/images/gs_new_vector_logo.svg"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
